Update index page

--- a/app/assets/stylesheets/_variables.scss
+++ b/app/assets/stylesheets/_variables.scss
@@ -12,6 +12,7 @@ $tan: #ccb68d;
 $darker-tan: #c9b38a;
 $light-grey: #b2b1b5;
 $grey: #777;
+$light-grape: #595463;
 $grape: #45414d;
 $brown: #45423d;
 $dark-grape: #393640;
