--- a/app/views/home/_slider.html.slim
+++ b/app/views/home/_slider.html.slim
@@ -13,9 +13,9 @@
               br
               | Among the neither know how to bestow
             p
-              = link_to 'GET IN TOUCH', '#', class: 'btn btn-raised btn-primary'
+              = link_to 'Liên hệ', '#', class: 'btn btn-raised btn-primary'
               | &nbsp;
-              = link_to 'GET MORE', '#', class: 'btn btn-raised btn-default'
+              = link_to 'Dịch vụ', '#', class: 'btn btn-raised btn-default'
 
     .item
       = image_tag 'sliders/pic2.jpg'
@@ -30,9 +30,9 @@
               br
               | Among the neither know how to bestow
             p
-              = link_to 'GET IN TOUCH', '#', class: 'btn btn-raised btn-primary'
+              = link_to 'Liên hệ', '#', class: 'btn btn-raised btn-primary'
               | &nbsp;
-              = link_to 'GET MORE', '#', class: 'btn btn-raised btn-default'
+              = link_to 'Dịch vụ', '#', class: 'btn btn-raised btn-default'
 
     .item
       = image_tag 'sliders/pic3.jpg'
@@ -47,9 +47,9 @@
               br
               | Among the neither know how to bestow
             p
-              = link_to 'GET IN TOUCH', '#', class: 'btn btn-raised btn-primary'
+              = link_to 'Liên hệ', '#', class: 'btn btn-raised btn-primary'
               | &nbsp;
-              = link_to 'GET MORE', '#', class: 'btn btn-raised btn-default'
+              = link_to 'Dịch vụ', '#', class: 'btn btn-raised btn-default'
 
 coffee:
   $('.slider').slick
