--- a/app/assets/stylesheets/home/_news.scss
+++ b/app/assets/stylesheets/home/_news.scss
@@ -37,6 +37,7 @@
 
   .latest-news__title {
     font-size: 18px;
+    font-weight: 500;
     margin-bottom: 14px;
     margin-top: 0;
     transition: all 100ms ease-out;
@@ -70,6 +71,16 @@
       font-family: 'FontAwesome';
       position: absolute;
       right: 25px;
+    }
+  }
+
+  .widget-title__line {
+    left: 140px;
+  }
+
+  @media (min-width: 992px) {
+    .widget-title__line {
+      left: 230px;
     }
   }
 }
