--- a/app/assets/stylesheets/home/_our_services.scss
+++ b/app/assets/stylesheets/home/_our_services.scss
@@ -29,6 +29,7 @@
 
     .title {
       font-size: 18px;
+      font-weight: 500;
       margin: 2px 0 6px;
       transition: all 100ms ease-out;
     }
