--- a/app/assets/stylesheets/theme.scss
+++ b/app/assets/stylesheets/theme.scss
@@ -66,13 +66,14 @@ body {
   background-color: transparent;
 }
 
+h1,
 h2,
 h3,
 h4,
 h5,
 h6 {
   color: $brown;
-  font-family: 'Alegreya', Georgia, 'Times New Roman', Times, serif;
+  font-family: 'Roboto Slab', serif;
 }
 
 p {
@@ -87,6 +88,7 @@ a {
 .widget {
   .title {
     font-size: 36px;
+    font-weight: 600;
     line-height: 1.2;
     margin-bottom: 25px;
     margin-top: 0;
@@ -108,7 +110,8 @@ a {
   margin-bottom: 50px;
 
   .widget-title {
-    font-size: 46px;
+    font-size: 27px;
+    font-weight: 600;
     line-height: 1.2;
     margin-bottom: 0;
     margin-top: 0;
@@ -121,5 +124,11 @@ a {
     right: 0;
     top: 50%;
     left: 221px;
+  }
+
+  @media (min-width: 992px) {
+    .widget-title {
+      font-size: 46px;
+    }
   }
 }
