--- a/app/views/layouts/_head.html.slim
+++ b/app/views/layouts/_head.html.slim
@@ -3,6 +3,7 @@ head
   meta http-equiv="X-UA-Compatible" content="IE=edge"
   meta name="viewport" content="width=device-width, initial-scale=1"
   link href='https://fonts.googleapis.com/css?family=Roboto:400,300,100,100italic,300italic,400italic,500,500italic,700,700italic,900,900italic' rel='stylesheet' type='text/css'
+  link href='https://fonts.googleapis.com/css?family=Roboto+Slab:400,100,300,700' rel='stylesheet' type='text/css'
   link href='https://fonts.googleapis.com/css?family=Montserrat:400,700' rel='stylesheet' type='text/css'
   link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet"
   = stylesheet_link_tag    'application', media: 'all'
