Add service pages

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,22 +1,24 @@
-@import 'bootstrap-sass';
-@import 'bootstrap-material-design';
-@import 'font-awesome';
-@import 'slick';
-@import 'slick-theme';
+@import "bootstrap-sass";
+@import "bootstrap-material-design";
+@import "font-awesome";
+@import "slick";
+@import "slick-theme";
 
-@import 'variables';
-@import 'theme';
-@import 'shared/header';
-@import 'shared/footer';
-@import 'home/slider';
-@import 'home/introduction';
-@import 'home/our_services';
-@import 'home/internship';
-@import 'home/team';
-@import 'home/our_pathway';
-@import 'home/news';
-@import 'home/new';
-@import 'home/clients';
-@import 'home/map';
-@import 'home/statistics';
-@import 'home/coming_soon';
+@import "variables";
+@import "theme";
+@import "shared/header";
+@import "shared/footer";
+@import "home/slider";
+@import "home/introduction";
+@import "home/our_services";
+@import "home/internship";
+@import "home/team";
+@import "home/our_pathway";
+@import "home/news";
+@import "home/new";
+@import "home/clients";
+@import "home/map";
+@import "home/statistics";
+@import "home/coming_soon";
+@import "layout/service";
+@import "services/service";
