--- a/app/views/home/_team.html.slim
+++ b/app/views/home/_team.html.slim
@@ -10,52 +10,10 @@
               = fa_icon "long-arrow-right", text: 'Read more', right: true
 
       .col-md-3
-        .person-profile
-          = image_tag 'person.jpg', class: 'person-profile__image'
-          .person-profile__container
-            .person-profile__content
-              span.person-profile__tag CEO
-              h3.person-profile__name George Hilton
-              p.person-profile__description I'm a London based lawyer and I was born and raised in Manchester. I completed my Masters in Law. I'm the CEO of this firm.
-            .person-profile__social-icons
-              span Meet me on
-              = link_to '#', class: 'person-profile__social_icon' do
-                = fa_icon 'facebook-square'
-              = link_to '#', class: 'person-profile__social_icon' do
-                = fa_icon 'twitter-square'
-              = link_to '#', class: 'person-profile__social_icon' do
-                = fa_icon 'linkedin-square'
+        = render 'shared/employee'
 
       .col-md-3
-        .person-profile
-          = image_tag 'person.jpg', class: 'person-profile__image'
-          .person-profile__container
-            .person-profile__content
-              span.person-profile__tag CEO
-              h3.person-profile__name George Hilton
-              p.person-profile__description I'm a London based lawyer and I was born and raised in Manchester. I completed my Masters in Law. I'm the CEO of this firm.
-            .person-profile__social-icons
-              span Meet me on
-              = link_to '#', class: 'person-profile__social_icon' do
-                = fa_icon 'facebook-square'
-              = link_to '#', class: 'person-profile__social_icon' do
-                = fa_icon 'twitter-square'
-              = link_to '#', class: 'person-profile__social_icon' do
-                = fa_icon 'linkedin-square'
+        = render 'shared/employee'
 
       .col-md-3
-        .person-profile
-          = image_tag 'person.jpg', class: 'person-profile__image'
-          .person-profile__container
-            .person-profile__content
-              span.person-profile__tag CEO
-              h3.person-profile__name George Hilton
-              p.person-profile__description I'm a London based lawyer and I was born and raised in Manchester. I completed my Masters in Law. I'm the CEO of this firm.
-            .person-profile__social-icons
-              span Meet me on
-              = link_to '#', class: 'person-profile__social_icon' do
-                = fa_icon 'facebook-square'
-              = link_to '#', class: 'person-profile__social_icon' do
-                = fa_icon 'twitter-square'
-              = link_to '#', class: 'person-profile__social_icon' do
-                = fa_icon 'linkedin-square'
+        = render 'shared/employee'
