--- a/app/views/layouts/services.html.slim
+++ b/app/views/layouts/services.html.slim
@@ -6,20 +6,8 @@ html
     header
       = render 'shared/header'
     
-    .main-title
-      .container
-        h1.main-title__primary = yield(:main_title_primary)
-        h3.main-title__secondary = yield(:main_title_secondary)
-
-    - if breadcrumbs.present?
-      .breadcrumbs
-        .container
-          - breadcrumbs.tap do |links|
-            - if links.any?
-              - links[0..-2].each do |link|
-                = link_to link.text, link.url, class: 'root-item' if link.key == :root
-                = link_to link.text, link.url, class: (link.current? ? 'current' : nil) if link.key != :root
-              span #{links[-1].text}
+    = render 'shared/main_title'
+    = render 'shared/breadcrumbs'
 
     #primary.content-area.container
       .row
