--- a/app/views/home/index.html.slim
+++ b/app/views/home/index.html.slim
@@ -7,8 +7,8 @@
   = render 'our_pathway'
   = render 'news'
   = render 'clients'
-  = render partial: 'map', locals: { markers: [{lat: 10.8809411, lng: 106.5936243, description: 'Khang Hai Lawfirm'}].to_json,
-                                     center_lat: 10.8809411,
-                                     center_lng: 106.5936243,
-                                     zoom: 14 }
+  = render partial: 'shared/map', locals: { markers: [{lat: 10.8809411, lng: 106.5936243, description: 'Khang Hai Lawfirm'}].to_json,
+                                            center_lat: 10.8809411,
+                                            center_lng: 106.5936243,
+                                            zoom: 14 }
   = render 'statistics'
