--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -25,6 +25,9 @@
 @import "home/coming_soon";
 @import "layout/services";
 @import "layout/pages";
+@import "layout/posts";
 @import "services/service";
 @import "pages/about_us";
-@import "pages/contact_us";
+@import "contacts/new";
+@import "posts/post";
+@import "posts/show";
