--- a/app/assets/stylesheets/layout/posts.scss
+++ b/app/assets/stylesheets/layout/posts.scss
@@ -15,6 +15,13 @@
     height: 60px;
     border-radius: 2px;
     transition: all 100ms ease-out;
+
+    &:focus {
+      background-color: $white;
+      border: 1px solid rgba(0, 0, 0, 0.2);
+      border-radius: 2px;
+      outline: -webkit-focus-ring-color auto 5px;
+    }
   }
 
   .search-submit {
