--- a/app/assets/stylesheets/services/_service.scss
+++ b/app/assets/stylesheets/services/_service.scss
@@ -1,6 +1,12 @@
 .services-service-container {
   .service-box {
     margin-bottom: 40px;
+
+    img {
+      width: 100%;
+      max-width: 100%;
+      height: auto;
+    }
   }
 
   .title {
