Update homepage and add authentication to rails admin

--- a/app/assets/stylesheets/home/_introduction.scss
+++ b/app/assets/stylesheets/home/_introduction.scss
@@ -1,9 +1,7 @@
 .home-introduction-container {
   margin-bottom: 33px;
 
-  .family-law,
-  .corporate-law,
-  .about-us {
+  .service-wrapper {
     .content {
       .title {
         font-size: 24px;
