--- a/app/views/home/_our_services.html.slim
+++ b/app/views/home/_our_services.html.slim
@@ -1,46 +1,12 @@
 .home-our-services-container
   .container
-    .row
-      .col-md-4
-        .service
-          .icon-box
-            = fa_icon 'university'
-            .content
-              h4.title Comercial Law
-              span.subtitle Our banking lawyers are highly experience and the amongth neither.
-      .col-md-4
-        .service
-          .icon-box
-            = fa_icon 'university'
-            .content
-              h4.title Civil Rights Law
-              span.subtitle Our banking lawyers are highly experience and the amongth neither.
-      .col-md-4
-        .service
-          .icon-box
-            = fa_icon 'university'
-            .content
-              h4.title Corporate Law
-              span.subtitle Our banking lawyers are highly experience and the amongth neither.
-    .row
-      .col-md-4
-        .service
-          .icon-box
-            = fa_icon 'university'
-            .content
-              h4.title Comercial Law
-              span.subtitle Our banking lawyers are highly experience and the amongth neither.
-      .col-md-4
-        .service
-          .icon-box
-            = fa_icon 'university'
-            .content
-              h4.title Civil Rights Law
-              span.subtitle Our banking lawyers are highly experience and the amongth neither.
-      .col-md-4
-        .service
-          .icon-box
-            = fa_icon 'university'
-            .content
-              h4.title Corporate Law
-              span.subtitle Our banking lawyers are highly experience and the amongth neither.
+    - @minor_services.each_slice(3) do |services|
+      .row
+        - services.each do |service|
+          .col-md-4
+            .service
+              .icon-box
+                = fa_icon 'university'
+                .content
+                  h4.title = service.title
+                  span.subtitle = service.content.truncate(100)
