--- a/app/views/layouts/pages.html.slim
+++ b/app/views/layouts/pages.html.slim
@@ -8,7 +8,8 @@ html
     
     = render 'shared/main_title'
     = render 'shared/breadcrumbs'
-
+    = render 'shared/flash_message'
+    
     = yield
 
     footer
