--- a/app/views/home/_introduction.html.slim
+++ b/app/views/home/_introduction.html.slim
@@ -11,21 +11,10 @@
 
       .col-md-8
         .row
-          .col-md-4
-            .family-law
-              = image_tag 'family-law.jpg', class: 'img-responsive'
-              .content
-                h5.title = link_to 'Family Law', '#'
-                p Family law deals with the branch of law pertaining to all matters that are related to family unit or other relations such as partnership, marriage, divorce and any other family matters.
-          .col-md-4
-            .corporate-law
-              = image_tag 'corporate-law.jpg', class: 'img-responsive'
-              .content
-                h5.title = link_to 'Corporate Law', '#'
-                p Today, many people are looking to start their own business. For this, they need to register their business or they might be accused of doing business illegally in the country. This is just one part of the business law.
-          .col-md-4
-            .about-us
-              = image_tag 'family-law.jpg', class: 'img-responsive'
-              .content
-                h5.title = link_to 'About Us', '#'
-                p Our Vision Founded in 1979, our firm has been providing effective, affordable and often untraditional legal solution to our hundreds and thousands of clients over the years.
+          - @major_services.each do |service|
+            .col-md-4
+              .service-wrapper
+                = link_to (image_tag service.picture.url(:thumb), class: 'img-responsive'), service
+                .content
+                  h5.title = link_to service.title, service
+                  p = service.content.truncate(200)
