--- a/app/views/home/_news.html.slim
+++ b/app/views/home/_news.html.slim
@@ -8,24 +8,15 @@
             span.widget-title__line
       .col-md-12
         .row
-          = render 'new'
-          = render 'new'
+          = render partial: 'new', locals: { post: @posts[0] }
+          = render partial: 'new', locals: { post: @posts[1] }
 
           .col-md-4
             .latest-news__container
-              = link_to '#', class: 'latest-news latest-news--inline' do
-                .latest-news__content
-                  h4.latest-news__title What services are available for crime victims
-                  .latest-news__full-date July 24, 2015
-
-              = link_to '#', class: 'latest-news latest-news--inline' do
-                .latest-news__content
-                  h4.latest-news__title What services are available for crime victims
-                  .latest-news__full-date July 24, 2015
-
-              = link_to '#', class: 'latest-news latest-news--inline' do
-                .latest-news__content
-                  h4.latest-news__title What services are available for crime victims
-                  .latest-news__full-date July 24, 2015
+              - @posts[2..-1].each do |post|
+                = link_to '#', class: 'latest-news latest-news--inline' do
+                  .latest-news__content
+                    h4.latest-news__title = post.title
+                    .latest-news__full-date = format_datetime(post.created_at)
 
               = link_to 'More news', '#', class: 'latest-news latest-news--more-news'
