--- a/app/views/pages/about_us.html.slim
+++ b/app/views/pages/about_us.html.slim
@@ -26,13 +26,8 @@
 
         .row
           .team-members
-            .col-md-4
-              = render 'shared/employee'
-
-            .col-md-4
-              = render 'shared/employee'
-
-            .col-md-4
-              = render 'shared/employee'
+            - @employees.each do |employee|
+              .col-md-4
+                = render partial: 'shared/employee', locals: { employee: employee }
 
             .clearfix
